# Super-Agents---Judge

./: .env.keys.template  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  LexIntelligentia_Judiciario_Prompts_Agentes_Especializados.md  README.md  ROADMAP.md  TUTORIAL.md  api_keys_template.csv  credentials-setup.md  jest.config.js  n8n_workflow_agentes_especializados_v2.2.json  n8n_workflow_stj_vectorstore.json  n8n_workflow_v2.1.1_cloud_ready.json  n8n_workflow_v2.6_fazenda_publica.json  n8n_workflow_v3.1_metrics.json  n8n_workflow_v4.0_cached.json  package-lock.json  package.json  requirements.txt
.github/: dependabot.yml
.serena/: project.yml
agent-os/: .env.example  pyproject.toml
agent-os/app/: main.py
agent-os/lex_agent_os.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent-ui/: README.md  package.json
agents/: agent_ALIMENTOS.md  agent_COBRANCA.md  agent_DIVORCIO.md  agent_EXECUCAO_FISCAL.md  agent_GUARDA.md  agent_INVENTARIO.md  agent_MANDADO_SEGURANCA.md  agent_PATERNIDADE.md  agent_REPARACAO_DANOS.md  agent_RESP_CIVIL_ESTADO.md  agent_SAUDE_MEDICAMENTOS.md  agent_SEGUROS.md  lex_prompter.md
config/: index.js  security.js  settings.json
data/: extracted_entities.json  stj_extracted_entities.json
docker/: docker-compose-qdrant.yml  docker-compose.yml
docs/: AB_TESTING_PLAN.md  AGENTES_FAMILIA_REFERENCIA.md  CACHE_IMPLEMENTATION_GUIDE.md  CATALOGO_PROMPTS_TEMPLATES.md  CRITICAL_AGENT_DESIGN.md  DASHBOARD_METRICS.md  DEPLOYMENT.md  ENV_VARIABLES.md  ERRORS_AND_FIXES.md  FINE_TUNING_FEASIBILITY_REPORT.md  FRAMEWORK_LEGAL_PROMPT_ENGINEERING.md  (+16 more)
(+361 files in other folders)
