[project]
name = "lex-agent-os"
version = "0.1.0"
description = "AgentOS backend for Lex Intelligentia - Legal AI Agents"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Lex Intelligentia", email = "dev@lexintelligentia.com" }]

dependencies = [
  "agno>=2.3.0",
  "fastapi[standard]",
  "uvicorn[standard]",
  "python-dotenv",
]

[project.optional-dependencies]
google = [
  "google-genai",
  "google-generativeai",
]
anthropic = [
  "anthropic",
]
openai = [
  "openai",
]
db = [
  "pgvector",
  "psycopg[binary]",
  "sqlalchemy",
]
tools = [
  "duckduckgo-search",
  "yfinance",
  "httpx",
]
all-extras = [
  "lex-agent-os[google,anthropic,openai,db,tools]",
]
dev = [
  "mypy",
  "ruff",
  "pytest",
  "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120
exclude = [".venv*", "__pycache__"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["agno.*", "google.*", "anthropic.*"]
ignore_missing_imports = true
